--- a/css/style.css
+++ b/css/style.css
@@ -14,21 +14,21 @@ h1, h2, h3 {
         background-color: #191970;
         font-size: 1em;
         border-radius: 3px;
-
 }
 
 nav {
         display: flex;
         flex-direction: column;
         align-items: center;
-        background-color: rgb(0, 0, 0);
+        background-color: #8677DE;
+        padding-left: 20%;
 }
 
 nav > a {
         text-decoration: none;
         color: #FFFFFF;
         font-weight: 800;
-        font-size: 32px;
+        font-size: 50px;
         font-family: Yellowtail, serif;
 }
 
@@ -51,16 +51,13 @@ nav ul li a {
         padding: 10px 0;
         width: 100%;
         text-decoration: none;
-        color:FFFFFF;
+        color:#000000;
 }
 
 header {
         display: flex;
-        flex-direction: column;
+        flex-direction: row;
         align-items: center;
-        background-image: url ("../img/mail.jpg");
-        background-repeat: no-repeat;
-        background-position: center;
         color: #FFFFFF;
         text-align: center;
         padding: 20px;
@@ -77,8 +74,8 @@ header p{
         text-align: center;
         padding: 10px 10px 20px 20px;
         background-color: white;
-        color: black;
-/**         width: 65%; */
+        color: black; 
+        width: 65%;
 }
 #sobre p {
         margin-bottom: 2.5em;
@@ -97,7 +94,7 @@ header p{
         text-align: center;
         padding: 10px 10px 20px 20px;
         color:#FFFFFF;
-/**        width: 65%; */
+        width: 65%; 
 }
 
 #aluno h1, h2 {
@@ -114,14 +111,14 @@ header p{
         color: black;
 }
 
-#projetos {
+#eventos {
         display: flex;
         flex-direction: column;
         align-items: center;
         text-align: center;
         padding: 10px 10px 20px 20px;
         color:#FFFFFF;
-/**         width: 65%; */
+        width: 65%; 
 }
 
 #contato {
@@ -134,4 +131,14 @@ header p{
 
 #contato p {
         color: black;
+}
+
+div frase {
+        color:rgb(0, 0, 0);
+        padding-left: 60%;
+}
+
+div doe {
+        color:rgb(0, 0, 0);
+        padding-left: 20%;
 }
