--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,8 @@ h1, h2, h3 {
         background-color: #191970;
         font-size: 1em;
         border-radius: 3px;
+        margin-bottom: 10%;
+        margin-top: 10%;
 }
 
 nav {
@@ -42,7 +44,7 @@ nav ul {
 }
 
 nav ul li {
-        text-align: center;
+        text-align: left;
         width: 100%;
 }
 
@@ -52,6 +54,10 @@ nav ul li a {
         width: 100%;
         text-decoration: none;
         color:#000000;
+}
+
+nav .botao {
+        align-self: flex-start;
 }
 
 header {
@@ -87,7 +93,7 @@ header p{
         color: #1c1c1c;
 }
 
-#aluno {
+#participantes {
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -97,14 +103,14 @@ header p{
         width: 65%; 
 }
 
-#aluno h1, h2 {
+#participantes h1, h2 {
         display: flex;
         flex-direction: column;
         text-align: center;
         color: black;
 }
 
-#aluno p {
+#participantes p {
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -117,7 +123,8 @@ header p{
         align-items: center;
         text-align: center;
         padding: 10px 10px 20px 20px;
-        color:#FFFFFF;
+        margin: 5%;
+        color:#000000;
         width: 65%; 
 }
 
@@ -133,12 +140,29 @@ header p{
         color: black;
 }
 
+#voluntários {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+        padding: 10px 10px 20px 20px;
+        color:#000000;
+        width: 65%; 
+}        
 div frase {
         color:rgb(0, 0, 0);
-        padding-left: 60%;
+        margin: 20%;
+
 }
 
 div doe {
         color:rgb(0, 0, 0);
         padding-left: 20%;
 }
+
+nav ul header img{
+        border-radius: 50px;
+        align-items: right;
+}
+
+
